# cpp_tutorial-basics

cpp_project_arithmatic/: CMakeLists.txt  readme.txt
cpp_project_arithmatic/include/: readme.txt
cpp_project_arithmatic/libs/: readme.txt
cpp_project_arithmatic/src/: function.cpp  function.h  main.cpp
cpp_project_classes/simple_class/: main.s
cpp_project_classes/simple_class_cmake/: readme.txt
cpp_project_classes/simple_class_cmake/src/: main.cpp  shape.cpp  shape.h
cpp_project_classes/simple_class_cmake_pointers_to_classes/: CMakeLists.txt
cpp_project_classes/simple_class_cmake_pointers_to_classes/doc/: How-To-Create-Executable.txt
cpp_project_classes/simple_class_cmake_pointers_to_classes/src/: main.cpp  shape.cpp  shape.h
cpp_project_classes/simple_class_cmake_with_constructor/src/: main.cpp  shape.cpp  shape.h
cpp_project_classes/simple_class_cmake_with_external_static_library/: CMakeLists.txt  readme.txt
cpp_project_classes/simple_class_cmake_with_external_static_library/doc/: How-To-Create-Executable-v1.txt
cpp_project_classes/simple_class_cmake_with_external_static_library/src/: main.cpp
cpp_project_extern/: main.cpp  readme.txt  support.cpp
cpp_project_initial/src/: CMakeLists.txt  config_handler.h  config_handler.h.in
cpp_project_pointers/: main.cpp
cpp_project_static_library/src/: MathLibrary.cpp  MathLibrary.h  MathLibrary.lib  readme.txt
media/: project_structure_reference.txt
